@startuml
skinparam linetype ortho
skinparam classAttributeIconSize 0

' =========================
' CORE STATE (Zustand source of truth)
' =========================
class SceneStorage {
  scene: Scene
  projectName: string
  activeObjectId: string | null
  +load(scene: Scene): void
  +getScene(): Scene
  +setActive(id: string | null): void
  +updateProjectName(name: string): void
}

class Scene {
  id: string
  objects: Array<SceneObject>
  lights: Array<Light>
  camera: CameraState
  environment: EnvironmentState
}

class SceneObject {
  id: string
  name: string
  visible: bool
  locked: bool
  pendingDelete: bool
  transform: object
  material: Material
}

class Material {
  id: string
  baseColor: string
  roughness: number
  metalness: number
  emissive: string
  textures: Map<TextureSlot, string>
}

enum TextureSlot {
  BaseColor
  Normal
  Roughness
  Metalness
  Emissive
}

class Light {
  id: string
  type: "Directional" | "Ambient"
  color: string
  intensity: number
}

class CameraState {
  type: "Perspective" | "Orthographic"
  zoom: number
  position: object
  target: object
}

class EnvironmentState {
  backgroundColor: string | null
  shadowsEnabled: bool
}

SceneStorage --> Scene
Scene --> SceneObject
Scene --> Light
Scene --> CameraState
Scene --> EnvironmentState
SceneObject --> Material
Material --> TextureSlot

' =========================
' ACTIONS + HISTORY (type + payload, no snapshots)
' =========================
enum CommandType {
  DeleteModel
  TransformObject
  EditMaterial
  ToggleVisibility
  ToggleLock
  SelectObject
  AddLight
  EditLight
  EditCamera
  SetBackground
  ToggleShadows
  RenameScene
  ImportTexture
  ExportTexture
  ImportSceneFile
  ExportSceneFile
  ImportSceneFigma
  ExportSceneFigma
  ExportRender
}

class HistoryEntry {
  type: CommandType
  payload: object
  timestamp: number
}

class History {
  actions: Array<HistoryEntry>
  redoActions: Array<HistoryEntry>
  maxCount: number = 10
  +push(entry: HistoryEntry): HistoryEntry | null
  +popLast(): HistoryEntry | null
  +popRedo(): HistoryEntry | null
  +clearRedo(): void
}

class CommandBus {
  history: History
  executor: ActionExecutor
  reverter: ActionReverter
  deletionGc: DeletionGarbageCollector
  +execute(type: CommandType, payload: object): void
  +undo(): void
  +redo(): void
}

class ActionExecutor {
  scene: SceneStorage
  handlers: Map<CommandType, SceneToolHandler>
  +run(type: CommandType, payload: object): void
}

class ActionReverter {
  scene: SceneStorage
  +revert(type: CommandType, payload: object): void
}

class DeletionGarbageCollector {
  scene: SceneStorage
  +purgeIfEvicted(entry: HistoryEntry | null): void
  +purgeModel(modelId: string): void
}

History --> HistoryEntry
CommandBus --> History
CommandBus --> ActionExecutor
CommandBus --> ActionReverter
CommandBus --> DeletionGarbageCollector
ActionExecutor --> SceneStorage
ActionReverter --> SceneStorage
DeletionGarbageCollector --> SceneStorage

' =========================
' TOOL HANDLERS (execute only, dumb workers)
' =========================
abstract class SceneToolHandler {
  scene: SceneStorage
  +execute(payload: object): void
}

class DeletionHandler {
  +execute(payload: object): void
  +softDelete(modelId: string): void
}

class BaseToolHandler {
  +execute(payload: object): void
}

class SelectionHandler {
  +execute(payload: object): void
}

class LightAdditionHandler {
  +execute(payload: object): void
}

class LightEditingHandler {
  +execute(payload: object): void
}

class CameraEditingHandler {
  +execute(payload: object): void
}

class EnvironmentHandler {
  +execute(payload: object): void
}

class TextureImportHandler {
  +execute(payload: object): void
}

class TextureExportHandler {
  +execute(payload: object): Blob
}

SceneToolHandler <|-- DeletionHandler
SceneToolHandler <|-- BaseToolHandler
SceneToolHandler <|-- SelectionHandler
SceneToolHandler <|-- LightAdditionHandler
SceneToolHandler <|-- LightEditingHandler
SceneToolHandler <|-- CameraEditingHandler
SceneToolHandler <|-- EnvironmentHandler
SceneToolHandler <|-- TextureImportHandler
SceneToolHandler <|-- TextureExportHandler

ActionExecutor --> SceneToolHandler
SceneToolHandler --> SceneStorage

' =========================
' RENDER + ANALYTICS
' =========================
class Renderer {
  +renderScene(canvas: HTMLCanvasElement, scene: Scene, options: RenderOptions): RenderResult
  +renderTexture(canvas: HTMLCanvasElement, textureId: string): Blob
}

class RenderOptions {
  transparentBackground: bool
  width: number
  height: number
}

class RenderResult {
  png: Blob
  durationMs: number
}

class RenderService {
  renderer: Renderer
  scene: SceneStorage
  +exportRender(options: RenderOptions): RenderResult
  +onProgress(listener: (percent: number) => void): void
}

class SceneAnalyzer {
  +getSceneProperties(scene: SceneStorage): SceneProperties
  +getTexturePreview(scene: SceneStorage): Array<HTMLCanvasElement>
}

class SceneProperties {
  polygonCount: number
  sizeBytes: number
  hasTextures: bool
}

RenderService --> Renderer
RenderService --> SceneStorage
RenderService --> RenderResult
RenderService --> RenderOptions
SceneAnalyzer --> SceneStorage
SceneAnalyzer --> SceneProperties

' =========================
' IMPORT / EXPORT (files + figma)
' =========================
class SceneEncoder {
  +export(type: "OBJ" | "FBX" | "GLB", scene: Scene): string
  +import(type: "OBJ" | "FBX" | "GLB" | "Figma", raw: string): Scene
}

class SceneImportExportService {
  encoder: SceneEncoder
  scene: SceneStorage
  analyzer: SceneAnalyzer
  notifications: NotificationService
  +exportToDevice(type: "OBJ" | "FBX" | "GLB"): Blob
  +importFromDevice(type: "OBJ" | "FBX" | "GLB", input: string): void
}

class TextureFigmaService {
  figmaHandler: FigmaHandler
  naming: SceneNamingService
  notifications: NotificationService
  +exportTextureFrame(textureId: string, materialName: string): string
  +importTextureFromFrame(frameId: string, materialId: string, slot: TextureSlot): void
  +applyFallbackTexture(materialId: string, slot: TextureSlot): void
}

class ScenePersistenceService {
  figmaHandler: FigmaHandler
  naming: SceneNamingService
  +saveLinkedSceneData(sceneId: string, glb: string, textureFrames: Array<string>, camera: CameraState): void
  +restoreLinkedSceneData(frameId: string): object
  +findSceneRenders(sceneId: string): Array<string>
  +updateExistingRenders(nodeIDs: Array<string>, png: Uint8Array): void
}

class SceneNamingService {
  +buildFrameName(sceneName: string, materialName: string): string
  +buildRenderName(sceneName: string): string
}

class SceneTransferFacade {
  sceneIo: SceneImportExportService
  textureFigma: TextureFigmaService
  persistence: ScenePersistenceService
  renderService: RenderService
  analyzer: SceneAnalyzer
  notifications: NotificationService
  +exportSceneToFigmaLinked(): void
  +importSceneFromFigma(frameId: string): void
  +exportSceneToDevice(type: "OBJ" | "FBX" | "GLB"): Blob
  +importSceneFromDevice(type: "OBJ" | "FBX" | "GLB", input: string): void
}

SceneImportExportService --> SceneEncoder
SceneImportExportService --> SceneStorage
SceneImportExportService --> SceneAnalyzer
SceneImportExportService --> NotificationService
TextureFigmaService --> SceneNamingService
TextureFigmaService --> NotificationService
ScenePersistenceService --> SceneNamingService
SceneTransferFacade --> SceneImportExportService
SceneTransferFacade --> TextureFigmaService
SceneTransferFacade --> ScenePersistenceService
SceneTransferFacade --> RenderService
SceneTransferFacade --> SceneAnalyzer
SceneTransferFacade --> NotificationService

' =========================
' FIGMA INTEGRATION
' =========================
class FigmaHandler {
  errors: string
  +subscribeSelection(listener: (frames: Array<string>) => void): void
  +getSelectedFrames(): Array<string>
  +getActivePageNodes(): Array<string>
  +getFrameBytes(nodeId: string): Uint8Array | null
  +createFrame(name: string, width: number, height: number): string
  +setPluginData(nodeID: string, key: string, value: string): void
  +getPluginData(nodeID: string, key: string): string | null
  +insertImage(nodeID: string, bytes: Uint8Array): void
}

class FigmaAPI {
  +postMessage(message: object): void
  +colors: object
}

FigmaHandler --> FigmaAPI
TextureFigmaService --> FigmaHandler
ScenePersistenceService --> FigmaHandler

' =========================
' ASSETS LIBRARY
' =========================
class AssetCatalogService {
  assets: Array<Asset>
  +listAssets(tags: Array<string>): Array<Asset>
  +loadAssetToScene(assetId: string): void
}

class Asset {
  id: string
  name: string
  description: string
  tags: Array<string>
  preview: string
  category: "Primitive" | "Mockup"
  source: string
}

AssetCatalogService --> Asset
AssetCatalogService --> SceneStorage

' =========================
' HELP / TOOLTIPS / NOTIFICATIONS / I18N
' =========================
class HelpService {
  i18n: LocalizationService
  +openHelpModal(): void
  +getWorkflowSteps(): Array<string>
  +getToolsList(): Array<TooltipData>
  +getShortcuts(): Array<ShortcutItem>
}

class TooltipService {
  enabled: bool
  i18n: LocalizationService
  +setEnabled(enabled: bool): void
  +getTooltip(toolId: string): TooltipData
}

class TooltipData {
  toolId: string
  name: string
  description: string
  shortcut: string
}

class ShortcutItem {
  toolId: string
  keys: string
}

class NotificationService {
  notifications: Array<Notification>
  +pushSuccess(message: string): string
  +pushError(message: string, reason: string): string
  +close(id: string): void
}

class Notification {
  id: string
  type: "Success" | "Error"
  message: string
  reason: string | null
  createdAt: number
}

class LocalizationService {
  locale: "ru" | "en"
  +setLocale(locale: "ru" | "en"): void
  +t(key: string): string
}

HelpService --> TooltipService
HelpService --> TooltipData
HelpService --> ShortcutItem
HelpService --> LocalizationService
TooltipService --> TooltipData
TooltipService --> LocalizationService
NotificationService --> Notification
SceneTransferFacade --> AssetCatalogService

@enduml
